Fix code readability

--- a/app/stylesheets/partials/_comments.sass
+++ b/app/stylesheets/partials/_comments.sass
@@ -33,9 +33,9 @@
 
   code
     background-color: #eee
-    border: 1px solid #ccc
+    border: 1px solid #E3E3E3
     color: #444
-    padding: 0.2em 0.2em
+    padding: 0 2px
     font-size: 12px
     +border-radius(2px)
 
@@ -134,7 +134,7 @@
     .content
       padding: 5px
       background-color: #fafafa
-      line-height: 1.4em
+      line-height: 1.5
 
 
     &.active a.number
